Further corrections based on comments of Richard

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -2976,6 +2976,18 @@ month = mar
   timestamp = {2015.04.05}
 }
 
+@ARTICLE{smith_bayer_2004,
+  author = {Smith, Richard S. and Bayer, Emmanuelle M.},
+  title = {Auxin transport-feedback models of patterning in plants},
+  journal = {Plant, Cell \& Environment},
+  year = {2009},
+  volume = {32},
+  pages = {1258--1271},
+  number = {9},
+  owner = {necrolyte},
+  timestamp = {2015.09.02}
+}
+
 @ARTICLE{sneath_1957,
   author = {P. Sneath},
   title = {The application of computers to taxonomy},
