Added missing ref, updated Fig S1, removed S3, S9 and updated table S1

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -1,5 +1,16 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
+@article{Vermeer:2014fl,
+author = {Vermeer, Joop E M and von Wangenheim, Daniel and Barberon, Marie and Lee, Yuree and Stelzer, Ernst H K and Maizel, Alexis and Geldner, Niko},
+title = {{A spatial accommodation by neighboring cells is required for organ initiation in Arabidopsis.}},
+journal = {Science (New York, N.Y.)},
+year = {2014},
+volume = {343},
+number = {6167},
+pages = {178--183},
+month = jan
+}
+
 @article{Geldner:2009bc,
 author = {Geldner, Niko and D{\'e}nervaud-Tendon, Val{\'e}rie and Hyman, Derek L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
 title = {{Rapid, combinatorial analysis of membrane compartments in intact plants with a multicolor marker set.}},
